# pitch_prophet

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
app/: main.py
app/core/: config.py
app/db/: db.py  enums.py  models.py  schema.py  settings.py
app/models/: fixtures.py  player.py  prediction.py  prediction_score.py  result.py  team.py
app/services/: scoring.py
db/: db.py  enums.py  models.py  settings.py
scripts/: init_db.py  seed_db.py
services/: scoring.py
tests/services/: test_scoring.py
