[project]
name = "pitch_prophet"
version = "0.1.0"
description = "A Python application to manage and score weekly football match predictions in the Premier League."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyright>=1.1.408",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
